<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="randomcompany.trackyourway.RegisterActivity"
    android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:minHeight="1050dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/h1"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Namelbl"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Agelbl"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Emaillbl"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/h2"
        android:id="@+id/Warninglbl"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"

        android:layout_alignEnd="@+id/Nametxt"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/certlbl"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Certtxt"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/collegelbl"
        android:id="@+id/textView10"
        android:layout_below="@+id/Certtxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Collegetxt"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Courselbl"
            android:id="@+id/textView11"
            android:layout_below="@+id/Collegetxt"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Coursetxt"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Nametxt"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Agetxt"
            android:layout_alignTop="@+id/textView6"
            android:layout_alignStart="@+id/Nametxt"
            android:layout_alignEnd="@+id/Nametxt"
            android:inputType="number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Emailtxt"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignStart="@+id/Agetxt"
            android:layout_alignParentEnd="true"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/interestslbl"
            android:id="@+id/textView12"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/Coursetxt"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/intereststxt"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usernamelbl"
            android:id="@+id/textView13"
            android:layout_below="@+id/intereststxt"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/passwordlbl"
            android:id="@+id/textView14"
            android:layout_below="@+id/textView13"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/UserNametxt"
            android:layout_below="@+id/intereststxt"
            android:layout_alignStart="@+id/Warninglbl"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="33dp"
            android:inputType="text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Passwordtxt"
            android:layout_below="@+id/UserNametxt"
            android:layout_alignStart="@+id/UserNametxt"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="33dp"
            android:inputType="textPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitbtn"
            android:id="@+id/registerdetailsbtn"
            android:layout_below="@+id/Passwordtxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="onClick" />
    </RelativeLayout>
</ScrollView>
