<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="Login"
        android:clickable="true"
        android:hyphenationFrequency="none"
        android:layout_above="@+id/registerBtn"
        android:layout_alignStart="@+id/registerBtn"
        android:layout_marginBottom="70dp"
        android:id="@+id/loginBtn"

        android:onClick="onClick" />

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/registerBtn"
        android:id="@+id/registerBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView"
        android:id="@+id/textView"
        android:layout_alignWithParentIfMissing="false"
        android:layout_above="@+id/registerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nameTv"
        android:id="@+id/nameTv"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="140dp"
       android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:id="@+id/userNameTxt"
        android:layout_marginTop="130dp"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:inputType="text" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Passwordtv"
        android:id="@+id/passwordTv"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="210dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:id="@+id/passwordTxt"
        android:inputType="textPassword"
        android:layout_marginTop="200dp"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/Warninglbl"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/nameTv"
        android:layout_marginTop="49dp"
        android:layout_alignEnd="@+id/userNameTxt"
        android:textColor="#ff0303"
        android:textAlignment="center" />


</RelativeLayout>